--- a/main.html
+++ b/main.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>Add Map</title>
-
-    <!-- jsFiddle will insert css and js -->
   </head>
+  <a href="addingtabs\map.html">Map</a>
+  <a href="addingtabs\profile.html">Profile</a>
+  <a href="addingtabs\workouts.html">Workouts</a>
   <body>
     <h3>My Google Maps Demo</h3>
     <!--The div element for the map -->
