--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Add Map</title>
+    <title>INVICTUS</title>
   </head>
   <a href="addingtabs\map.html">Map</a>
   <a href="addingtabs\profile.html">Profile</a>
