--- a/addingtabs/map.html
+++ b/addingtabs/map.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>INVICTUS</title>
+    <title>INVICTUS Map</title>
+    <link rel="stylesheet" href="mapstyle.css">
   </head>
-  <a href="addingtabs\map.html">Map</a>
-  <a href="addingtabs\profile.html">Profile</a>
-  <a href="addingtabs\workouts.html">Workouts</a>
   <body>
     <h3>Invictus</h3>
-    <!--The div element for the map -->
     <div id="map"></div>
 
-    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&libraries=&v=weekly&channel=2"
       async
