--- a/addingtabs/home.html
+++ b/addingtabs/home.html
@@ -13,7 +13,7 @@
       Welcome to INVICTUS
       </h1>
     <h2>
-  This is the home page of INVICTUS. At the top of the page you can navigate to the different pages of our website.
+  This is the home page of INVICTUS. At the top of the page you can navigate to the different pages of our website. You can read our ReadMe file here, on the homepage of our GitHub. (https://github.com/s-behanh/Invictus- ) copy the link that is in parenthesis and paste in to a search engine to go to the page. 
     </h2>
 </body>
 </html>
