--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>INVICTUS</title>
   </head>
+  <a href="addingtabs\login.html">Login</a>
+  <a href="addingtabs\home.html">Home</a>
   <a href="addingtabs\map.html">Map</a>
   <a href="addingtabs\profile.html">Profile</a>
   <a href="addingtabs\workouts.html">Workouts</a>
