--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
   <a href="addingtabs\profile.html">Profile</a>
   <a href="addingtabs\workouts.html">Workouts</a>
   <body>
-    <h3>My Google Maps Demo</h3>
-    <!--The div element for the map -->
-    <div id="map"></div>
-
-    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&libraries=&v=weekly&channel=2"
-      async
-    ></script>
+    <h3>Welcome to INVICTUS. Created by Andija Nunn and Hale Behan. Please navigate to any tab above.</h3>
+  
   </body>
 </html>
