--- a/tabs/login.html
+++ b/tabs/login.html
@@ -8,6 +8,11 @@
   <title>Login</title>
   <link rel="stylesheet" href="login.css">
   <script defer src="login.js"></script>
+  <a href="addingtabs\login.html">Login</a>
+  <a href="addingtabs\home.html">Home</a>
+  <a href="addingtabs\map.html">Map</a>
+  <a href="addingtabs\profile.html">Profile</a>
+  <a href="addingtabs\workouts.html">Workouts</a>
 </head>
 
 <body>
