--- a/tabs/workouts.html
+++ b/tabs/workouts.html
@@ -2,6 +2,11 @@
   <head>
    Workouts Page
    <link rel="stylesheet" href="workoutsstyle.css">
+   <a href="addingtabs\login.html">Login</a>
+   <a href="addingtabs\home.html">Home</a>
+   <a href="addingtabs\map.html">Map</a>
+   <a href="addingtabs\profile.html">Profile</a>
+   <a href="addingtabs\workouts.html">Workouts</a>
   </head>
  
   <body>
