new folder and links

--- a/tabs/map.html
+++ b/tabs/map.html
@@ -1,16 +1,13 @@
-<<<<<<< Updated upstream
- <div id="map"></div>
-=======
 <!DOCTYPE html>
 <html>
   <head>
     <title>INVICTUS Map</title>
     <link rel="stylesheet" href="mapstyle.css">
-    <a href="addingtabs\login.html">Login</a>
-    <a href="addingtabs\home.html">Home</a>
-    <a href="addingtabs\map.html">Map</a>
-    <a href="addingtabs\profile.html">Profile</a>
-    <a href="addingtabs\workouts.html">Workouts</a>
+    <a href="tabs/login.html">Login</a>
+    <a href="tabs/home.html">Home</a>
+    <a href="tabs/map.html">Map</a>
+    <a href="tabs/profile.html">Profile</a>
+    <a href="tabs/workouts.html">Workouts</a>
   </head>
   <body>
     <h3>Invictus</h3>
@@ -20,4 +17,3 @@
   
   </body>
 </html>
->>>>>>> Stashed changes
