--- a/tabs/home.html
+++ b/tabs/home.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-      <a href="addingtabs\login.html">Login</a>
-      <a href="addingtabs\home.html">Home</a>
-      <a href="addingtabs\map.html">Map</a>
-      <a href="addingtabs\profile.html">Profile</a>
-      <a href="addingtabs\workouts.html">Workouts</a>
+      <a href="tabs/login.html">Login</a>
+      <a href="tabs/home.html">Home</a>
+      <a href="tabs/map.html">Map</a>
+      <a href="tabs/profile.html">Profile</a>
+      <a href="tabs/workouts.html">Workouts</a>
       <link rel="stylesheet" href="home.css">
   </head>
  
