--- a/tabs/home.html
+++ b/tabs/home.html
@@ -6,6 +6,7 @@
       <a href="tabs/profile.html">Profile</a>
       <a href="tabs/workouts.html">Workouts</a>
       <link rel="stylesheet" href="home.css">
+      <link rel="index" href="index.html">
   </head>
  
   <body>
