--- a/tabs/map.html
+++ b/tabs/map.html
@@ -8,6 +8,7 @@
     <a href="tabs/map.html">Map</a>
     <a href="tabs/profile.html">Profile</a>
     <a href="tabs/workouts.html">Workouts</a>
+    <link rel="index" href="index.html">
   </head>
   <body>
     <h3>Invictus</h3>
