--- a/tabs/login.html
+++ b/tabs/login.html
@@ -13,6 +13,7 @@
   <a href="tabs/map.html">Map</a>
   <a href="tabs/profile.html">Profile</a>
   <a href="tabs/workouts.html">Workouts</a>
+  <link rel="index" href="index.html">
 </head>
 
 <body>
