--- a/tabs/profile.html
+++ b/tabs/profile.html
@@ -7,6 +7,7 @@
    <a href="tabs/map.html">Map</a>
    <a href="tabs/profile.html">Profile</a>
    <a href="tabs/workouts.html">Workouts</a>
+   <link rel="index" href="index.html">
   </head>
  
   <body>
