--- a/tabs/login.html
+++ b/tabs/login.html
@@ -24,7 +24,7 @@
     </h2>
     
     <div id="login-error-msg-holder">
-      <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and.or invalid password</span></p>
+      <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/ or invalid password</span></p>
     </div>
     
     <form id="login-form">
