--- a/tabs/map.html
+++ b/tabs/map.html
@@ -11,7 +11,7 @@
     <link rel="index" href="index.html">
   </head>
   <body>
-    <h3>Invictus</h3>
+    <h3>Map API</h3>
 
     <div id="map"></div>
 
