--- a/tabs/profile.html
+++ b/tabs/profile.html
@@ -2,11 +2,11 @@
   <head>
    Profile Page
    <link rel="stylesheet" href="profilestyle.css">
-   <a href="tabs/login.html">Login</a>
-   <a href="tabs/home.html">Home</a>
-   <a href="tabs/map.html">Map</a>
-   <a href="tabs/profile.html">Profile</a>
-   <a href="tabs/workouts.html">Workouts</a>
+   <a href=" login.html">Login</a>
+   <a href=" home.html">Home</a>
+   <a href=" map.html">Map</a>
+   <a href=" profile.html">Profile</a>
+   <a href=" workouts.html">Workouts</a>
    <link rel="index" href="index.html">
   </head>
  
