--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <title>INVICTUS</title>
   </head>
-  <a href="tabs/login.html">Login</a>
-  <a href="tabs/home.html">Home</a>
-  <a href="tabs/map.html">Map</a>
-  <a href="tabs/profile.html">Profile</a>
-  <a href="tabs/workouts.html">Workouts</a>
+  <a href="login.html">Login</a>
+  <a href="home.html">Home</a>
+  <a href="map.html">Map</a>
+  <a href="profile.html">Profile</a>
+  <a href="workouts.html">Workouts</a>
   <body>
     <h3>Welcome to INVICTUS. Created by Andija Nunn and Hale Behan. Please navigate to any tab above.</h3>
   
