--- a/tabs/home.html
+++ b/tabs/home.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-      <a href="tabs/login.html">Login</a>
-      <a href="tabs/home.html">Home</a>
-      <a href="tabs/map.html">Map</a>
-      <a href="tabs/profile.html">Profile</a>
-      <a href="tabs/workouts.html">Workouts</a>
+      <a href=" login.html">Login</a>
+      <a href=" home.html">Home</a>
+      <a href=" map.html">Map</a>
+      <a href=" profile.html">Profile</a>
+      <a href=" workouts.html">Workouts</a>
       <link rel="stylesheet" href="home.css">
       <link rel="index" href="index.html">
   </head>
