--- a/tabs/login.html
+++ b/tabs/login.html
@@ -8,11 +8,7 @@
   <title>Login</title>
   <link rel="stylesheet" href="login.css">
   <script defer src="login.js"></script>
-  <a href="tabs/login.html">Login</a>
-  <a href="tabs/home.html">Home</a>
-  <a href="tabs/map.html">Map</a>
-  <a href="tabs/profile.html">Profile</a>
-  <a href="tabs/workouts.html">Workouts</a>
+  <h1> <a href=" login.html">Login</a> <a href=" home.html">Home</a> <a href=" map.html">Map</a> <a href=" profile.html">Profile</a> <a href=" workouts.html">Workouts</a> </h1>
   <link rel="index" href="index.html">
 </head>
 
