--- a/tabs/workouts.html
+++ b/tabs/workouts.html
@@ -12,10 +12,14 @@
  
   <body>
       <h1>
-      This is where you will find your past workouts. 
+      This is where you will find your past workouts and workout suggestions. 
+
+        Running workout suggestions: 
+          Dynamic stretches
+          1 mile easy warmup
+          3 miles at goal mile pace 
+          1 mile cooldown 
       </h1>
-    <h2>
-        You will be able to see all of your past worjouts as well as the leaderboard for a workout route that others have done.
-    </h2>
+
 </body>
 </html>
